--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,7 @@
 {
+    "name": "symfony/symfony",
     "type": "project",
+    "description": "Slut projekt i kursen mvc",
     "license": "proprietary",
     "minimum-stability": "dev",
     "prefer-stable": true,
@@ -7,7 +9,6 @@
         "php": ">=7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "composer/package-versions-deprecated": "1.11.99.1",
         "doctrine/annotations": "^1.0",
         "doctrine/doctrine-bundle": "^2.3",
         "doctrine/doctrine-migrations-bundle": "^3.1",
@@ -50,7 +51,9 @@
         "symfony/phpunit-bridge": "^5.2",
         "symfony/stopwatch": "^5.2",
         "symfony/var-dumper": "^5.2",
-        "symfony/web-profiler-bundle": "^5.2"
+        "symfony/web-profiler-bundle": "^5.2",
+        "phpstan/phpstan": "^0.12.85",
+        "phpunit/phpunit": "^9.5"
     },
     "config": {
         "optimize-autoloader": true,
